[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bltzr"
authors = [{name = "Vladimir Zorin", email = "vladimir@deviant.guru"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies = [ 'psycopg2', 'torch', 'numpy' ]

[project.urls]
Home = "https://github.com/epicfilemcnulty/bltzr"
